Fix DCHECK failure in BackgroundDownloader::TimerIsRunning.

Bug: 730291
Change-Id: I1e0b4f83c3235ee05d9c9724c6d31f86b12ccd85